<resources>
    <string name="app_name">开关配置</string>
    <string name="title">开关配置</string>
    <string name="search_tip">默认配置文件会半个小时拉一次，拉下来后会存储在本地，通过ConfigService.getConfig(key);可以获取本地存储的值，目前测试demo中配置了如下的key:\n test1, test2, test3</string>
    <string name="search_hint">输入在后台配置的key值</string>
    <string name="search">搜索</string>
    <string name="sync_tip">点击后会调用mConfigService.loadConfigImmediately(0);立即从服务器拉取最新的配置，在后台修改后，调用该接口可以立即返回最新的值</string>
    <string name="sync_config">立即更新配置</string>
    <string name="monitor_tip">监听一组key值的变化，被监听的key所配置的值发生变化时，会通知监听者</string>
    <string name="monitor_config_change">监听test1配置的变化</string>
    <string name="monitor_result">监听到发生变化：</string>
</resources>
