<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/h5_default_titlebar_color"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/search_tip" />


            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/search_hint"
                android:text="test1" />

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/search" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="此处显示开关值"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/sync_tip" />

            <Button
                android:id="@+id/sync_config"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/sync_config" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/monitor_tip" />

            <Button
                android:id="@+id/monitor_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/monitor_config_change" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
